# auth-api

./: README.md  openapi.json
backend/: .env  Cargo.toml
backend/migrations/: 20240625120000_create_users_table.up.sql
backend/src/: main.rs
backend/src/config/: config.rs
backend/src/db/: queries.rs
backend/src/middleware/: auth.rs
backend/src/models/: user.rs
backend/src/routes/: auth.rs  health.rs  mod.rs  profile.rs  protected.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Login.tsx  Navbar.tsx  Profile.tsx  ProtectedRoute.tsx  Register.tsx
